fixed tri content on mobile live

--- a/nwcc_pyramid/static/theme.css
+++ b/nwcc_pyramid/static/theme.css
@@ -89,6 +89,7 @@ hr {
 .tricontent {
   width: 101vw;
   margin: -2px;
+  display: initial;
 }
 
 .tri_img {
